# labs-ekaterina-nikiforova

./: .gitignore  CMakeLists.txt  README.md
lab-1-hash/: CMakeLists.txt
lab-1-hash/include/: extendible_hash.h  min_lsh_hash.h  perfect_hash.h
lab-1-hash/report/: lab1.typ
lab-1-hash/report/data/: lsh_latency_table.txt  perfect_hash_latency_table.txt
lab-1-hash/src/: extendible_hash.cpp  min_lsh_hash.cpp  perfect_hash.cpp
lab-1-hash/tests/: extendible_clean_perf.sh  extendible_hash_tests.cpp  extendible_perf.sh  extendible_perf_tests.cpp  min_hash_bench_tests.cpp  perfect_hash_tests.cpp
lab-1-hash/tests/plots/: extendible_plot.py  min_lsh_plot.py  perfect_plot.py
lab-2-geo/report/data/: quadtree_latency_table.txt
lab-2-geo/src/: quadtree.cpp
lab-2-geo/tests/: quadtree_bench_plot.py  quadtree_bench_tests.cpp
lab-3-vectors/: lab-3-vectors.ipynb  lab_3_vectors.ipynb
lab-4-concurrent-hash-map/: pom.xml
lab-4-concurrent-hash-map/plots/: bench_plot.py
lab-4-concurrent-hash-map/report/: lab4.typ
lab-4-concurrent-hash-map/results/: org.example.MyConcurrentMapStressTest.html  org.example.SimpleHashMapStressTest.html
lab-4-concurrent-hash-map/src/main/java/org/example/: MyConcurrentHashMap.java  SimpleHashMap.java
lab-4-concurrent-hash-map/src/test/java/org/example/: MapBenchmark.java  MyConcurrentMapStressTest.java  SimpleHashMapStressTest.java
lab1/: CMakeLists.txt
lab1/include/: extendible_hash.h  min_lsh_hash.h  perfect_hash.h
lab1/src/: extendible_hash.cpp  min_lsh_hash.cpp  perfect_hash.cpp
lab1/tests/: extendible_bench_tests.cpp  min_hash_tests.cpp  perfect_bench_tests.cpp  perfect_hash_tests.cpp
lab1/tests/plots/: extendible_plot.py  min_lsh_plot.py  perfect_plot.py
lab2/: CMakeLists.txt
lab2/include/: quadtree.h
lab2/tests/: quadtree_bench_plot.py  quadtree_tests.cpp
report/: lab1.typ  lab2.typ
report/data/: extendible_latency_table.txt  quadtree_latency_table.txt
